@@ -12,6 +12,7 @@
         "aai-containers >= 0.2.11",
         "accumulator-walls >= 0.1.3",
         "Advanced-Electric-Revamped-v16 >= 0.6.15",
+        "alien-biomes >= 0.6.8",
         "AsphaltPaving >= 1.3.1",
         "Asteroid_Mining >= 0.9.15",
         "better-victory-screen >= 0.3.1",
